saving before reverting to snake case

--- a/client/templates/game.hbs
+++ b/client/templates/game.hbs
@@ -1,1 +1,61 @@
-The game
+<div class="profile-image">
+  <img class="large-avatar" {{bind-attr src=avatarUrl}}></img>
+</div>
+<div class="sub-header profile-header"> 
+  <h2 {{name}} </h2>
+  <div> {{description}} </div>
+</div>
+<div class="container-fluid game-profile-body">
+  <div class="row">
+   <div class="col-md-7">
+    <div class="profile-block">
+      <div class="block-header event-feed-header">
+        <h3 class="text-white m-t-50 m-b-30 m-r-20 text-center">
+         Event Feed
+        </h3> 
+      </div>
+      <div class="block-body event-feed-body">
+      </div>
+    </div>
+  </div>
+  <div class="col-md-5">
+    <div class="row">
+      <div class="col-md-12 m-b-20"> 
+        <div class="profile-block">
+          <div class="block-header tag-header">
+            <h4 class="text-white m-t-50 m-b-30 m-r-20 text-center"> Tag a Human </h4> 
+          </div>
+          <div class="block-body tag-body">
+           <input class="form-control col-md-offset-1" placeholder="human code">
+           <div type="button" class="save-tag-btn btn btn-primary btn-lg">save tag</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 m-b-20"> 
+        <div class="profile-block">
+          <div class="block-header player-list-header">
+            <h3 class="text-white m-t-50 m-b-30 m-r-20 text-center"> Player List </h3> 
+          </div>
+          <div class="block-body player-list-body">
+            {{#each player in players}}
+              <div class="player-item">
+                <div class="player-item-avatar">
+                  {{#link-to 'user' player.user}}
+                    <img class="medium-avatar" {{bind-attr src=player.user.avatarUrl}}></img>
+                  {{/link-to}}
+                </div>
+                <div class="player-item-name">
+                  {{player.user.screenName}}
+                </div>
+              </div>
+            {{/each}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+ </div>
+</div>
+
