--- a/client/templates/login.hbs
+++ b/client/templates/login.hbs
@@ -1,1 +1,33 @@
-login
+{{#if errorMessage}}
+  <div class="alert alert-danger">
+    <p>
+      <strong>Login failed:</strong> <code>{{errorMessage}}</code>
+    </p>
+  </div>
+{{/if}}
+<div class="container-fluid">
+  <div class="row">
+    <div class="login-page col-md-offset-1 col-md-5">
+      <form {{action 'authenticate' on='submit'}} class="form-horizontal" role="form">
+        <div class="form-group">
+          <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+          <div class="col-sm-10">
+            {{ input type="text" placeholder="email" valueBinding="email" value=identification}}
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+          <div class="col-sm-10">
+            {{input type="password" placeholder="password" valueBinding="password" value=password}}
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-success">Sign in</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
