saving for mike

--- a/client/stylesheets/app.styl
+++ b/client/stylesheets/app.styl
@@ -1,3 +1,23 @@
+
+//d3
+body 
+  font: 10px sans-serif;
+
+.axis path,
+.axis line
+  fill: none
+  stroke: #000
+  shape-rendering: crispEdge
+
+.x.axis path
+  display: none
+
+.line
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+
+
 //profile photos
 .large-avatar
   width: 150px
@@ -30,6 +50,11 @@
   ul > li:hover > a 
     background: #428bca 
     color: #fff 
+
+.chart
+  height: 230px
+  width: 600px
+  background-color: #000
 
 // all the content on game profiles are made of these blocks
 .profile-block
@@ -74,7 +99,7 @@
     .save-tag-btn
       margin-top: 10px
       margin-left: 66px
-      background-color: #98C4E9;
+      background-color: #2A7ABD;
       border-color: #FFFFFF;
 
 //an item in the player list on the game profile page
