--- a/client/templates/user.hbs
+++ b/client/templates/user.hbs
@@ -1,8 +1,8 @@
 <div class="profile-image">
-  <img class="large-avatar" {{bind-attr src=avatarUrl}}></img>
+  <img class="large-avatar" {{bind-attr src=avatar_url}}></img>
 </div>
 <div class="sub-header profile-header"> 
-  <h2 class="profile-screen-name"> {{screenName}} </h2>
-  <h4 class="profile-screen-name"> ({{firstName}} {{lastName}}) </h4>
+  <h2 class="profile-screen-name"> {{screen_name}} </h2>
+  <h4 class="profile-screen-name"> ({{first_name}} {{last_name}}) </h4>
 </div>
 {{outlet}}
