--- a/client/templates/user.edit.hbs
+++ b/client/templates/user.edit.hbs
@@ -22,19 +22,19 @@
         <div class="form-group">
           <label class="col-sm-3 control-label">First Name</label>
           <div class="col-sm-5">
-            {{ input type="text" placeholder="first name" valueBinding="firstName" }}
+            {{ input type="text" placeholder="first name" valueBinding="first_name" }}
           </div>
         </div>
         <div class="form-group">
           <label class="col-sm-3 control-label">Last Name</label>
           <div class="col-sm-5">
-            {{input type="password" placeholder="last name" valueBinding="lastName" }}
+            {{input type="text" placeholder="last name" valueBinding="last_name" }}
           </div>
         </div>
         <div class="form-group">
           <label class="col-sm-3 control-label">Screen Name</label>
           <div class="col-sm-5">
-            {{input type="text" placeholder="screen name" valueBinding="screenName" }}
+            {{input type="text" placeholder="screen name" valueBinding="screen_name" }}
           </div>
         </div>
         <div class="form-group">
