--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,3 +1,7 @@
+body{font:10px sans-serif}
+.axis path,.axis line{fill:none;stroke:#000;shape-rendering:crispEdge}
+.x.axis path{display:none}
+.line{fill:none;stroke:#4682b4;stroke-width:1.5px}
 .large-avatar{width:150px;height:150px;border-radius:23px}
 .medium-avatar{width:70px;height:70px;border-radius:5px}
 .profile-header{font-size:13px}
@@ -6,6 +10,7 @@
 .sidebar ul > li > a{color:#fff}
 .sidebar ul > li > a.active{background:rgba(66,139,202,0.38);color:#fff}
 .sidebar ul > li:hover > a{background:#428bca;color:#fff}
+.chart{height:230px;width:600px;background-color:#000}
 .profile-block{margin-top:20px;}
 .profile-block .block-header{height:75px;font-size:24px;color:#fff;padding-top:6px}
 .profile-block .event-feed-header{background-color:#428bca}
@@ -16,7 +21,7 @@
 .profile-block .player-list-body{height:auto}
 .profile-block .tag-body{height:100px;padding-top:17px;}
 .profile-block .tag-body .form-control{float:left;display:block;width:225px;height:66px;padding:11px 11px;font-size:28px;line-height:1.42857143;color:#555;background-color:#fff;background-image:none;border:1px solid #c0b6b6}
-.profile-block .tag-body .save-tag-btn{margin-top:10px;margin-left:66px;background-color:#98c4e9;border-color:#fff}
+.profile-block .tag-body .save-tag-btn{margin-top:10px;margin-left:66px;background-color:#2a7abd;border-color:#fff}
 .player-item{display:inline-block;width:79px;font-size:11px;height:88px;padding:4px;margin:2px;overflow:hidden}
 .login-page{margin-top:150px}
 .create-account-page{margin-top:50px}
