--- a/client/stylesheets/app.styl
+++ b/client/stylesheets/app.styl
@@ -1,3 +1,52 @@
+.join-game
+  margin-top: 20px
+
+.game-list-name
+  font-weight: 200px
+  font-size: 35px
+  margin-bottom: 30px
+  color: #0A98D3
+
+.game-info-text
+  font-size: 30
+  font-weight: bold
+
+//call out stuff for the discovery page
+.bs-callout
+  padding: 15px 30px 15px 15px
+  border-left: 5px solid #eee
+
+.bs-callout h4
+  margin-top: 0
+
+.bs-callout p:last-child
+  margin-bottom: 0;
+
+.bs-callout code,
+.bs-callout .highlight
+  background-color: #fff
+
+/* Themes for different contexts */
+.bs-callout-danger
+  background-color: #fcf2f2
+  border-color: #dFb5b4
+
+.discovery-callout
+  background-color: #DAE9F6
+  border-color: #0A98D3
+
+
+
+//flesh logo
+.logo
+  text-shadow:none
+  font-family:"sansita one"
+  font-weight:bold
+.navbar-brand
+  margin-left: 20px
+  font-size:30px
+  line-height:40px
+
 
 //d3
 body 
@@ -79,6 +128,16 @@ body
   //details for specific block bodies
   .event-feed-body
     height: 100px
+    text-align: center;
+    vertical-align: middle;
+    line-height: 100px;       /* the same as your div height */
+    //only for empty feed
+    font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+    letter-spacing: -0.02em;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 32px;
+    margin: 0 auto;
   .player-list-body
     height: auto    
   .tag-body
