--- a/client/templates/application.hbs
+++ b/client/templates/application.hbs
@@ -7,13 +7,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Flesh</a>
+      {{#link-to 'index' classNames="navbar-brand logo"}} flesh {{/link-to}}
     </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li> {{#link-to 'user.edit' session.user}} Settings {{/link-to}} </li>
-      </ul>
-    </div>
+    {{#if session.isAuthenticated}}
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li> {{#link-to 'user.edit' session.user}} Settings {{/link-to}} </li>
+        </ul>
+      </div>
+    {{/if}}
   </div>
 </div>
 <div class="container-fluid">
