--- a/client/templates/discovery.hbs
+++ b/client/templates/discovery.hbs
@@ -1,2 +1,15 @@
-<h2 class="sub-header"> Discovery </h2>
+<div class="bs-callout discovery-callout">
+  <div class="container-fluid profile-header"> 
+    <div class="row">
+      <div class="col-md-12">
+        <div class="game-list-name">
+          {{#link-to 'game' 1 }}University of Idaho Spring 2013 {{/link-to}}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 
