--- a/client/templates/user.edit.hbs
+++ b/client/templates/user.edit.hbs
@@ -1,10 +1,9 @@
-{{#if errorMessage}}
-  <div class="alert alert-danger">
-    {{errorMessage}}
-  </div>
-{{/if}}
+{{#if success}}<div class="alert alert-success"> {{success}} </div> {{/if}}
+{{#if error}} <div class="alert alert-danger"> {{error}} </div> {{/if}}
+
 <div class="container-fluid">
   <div class="row create-account-page">
+  <div class="alert alert-warning"> Want to add a photo? Go to <a href="http://en.gravatar.com/">http://en.gravatar.com/</a> and setup a Gravatar with the email: {{email}} </div>
     <div class="col-md-5">
       <form class="form-horizontal" role="form">
         <div class="form-group">
