--- a/client/templates/users.create.hbs
+++ b/client/templates/users.create.hbs
@@ -1,3 +1,6 @@
+{{#if errors}}
+  <div class="alert alert-danger"><h1>{{errors}}</h1></div>
+{{/if}}
 <div class="container-fluid">
   <div class="row create-account-page">
     <div class="col-md-5">
