--- a/client/templates/login.hbs
+++ b/client/templates/login.hbs
@@ -1,7 +1,7 @@
-{{#if errors}}
+{{#if error}}
   <div class="alert alert-danger">
     <p>
-      <strong>Login failed:</strong> <code>{{errors}}</code>
+      <strong>Login failed:</strong> <code>{{error}}</code>
     </p>
   </div>
 {{/if}}
