--- a/client/templates/pwreset.hbs
+++ b/client/templates/pwreset.hbs
@@ -1,4 +1,4 @@
-{{#if errors}} <div class="alert alert-danger"> {{errors}} </div> {{/if}}
+{{#if error}} <div class="alert alert-danger"> {{error}} </div> {{/if}}
 {{#if success}} <div class="alert alert-success"> {{success}} </div> {{/if}}
 
 <div class="container-fluid">
