--- a/client/templates/user.edit.hbs
+++ b/client/templates/user.edit.hbs
@@ -3,7 +3,9 @@
 
 <div class="container-fluid">
   <div class="row create-account-page">
-  <div class="alert alert-warning"> Want to add a photo? Go to <a href="http://en.gravatar.com/">http://en.gravatar.com/</a> and setup a Gravatar with the email: {{email}} </div>
+  <div class="alert alert-warning"> 
+    Want to add a photo? Go to <a href="http://en.gravatar.com/">http://en.gravatar.com/</a> and setup a Gravatar with the email: {{email}} 
+  </div>
     <div class="col-md-5">
       <form class="form-horizontal" role="form">
         <div class="form-group">
