--- a/client/templates/application.hbs
+++ b/client/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -9,13 +9,6 @@
       </button>
       {{#link-to 'index' classNames="navbar-brand logo"}} flesh {{/link-to}}
     </div>
-    {{#if session.isAuthenticated}}
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li> {{#link-to 'user.edit' session.user}} Settings {{/link-to}} </li>
-        </ul>
-      </div>
-    {{/if}}
   </div>
 </div>
 <div class="container-fluid">
@@ -23,6 +16,7 @@
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
         {{#if session.isAuthenticated}}
+          <li>{{#link-to 'user.edit' session.user}} Settings {{/link-to}}</li>
           <li><a {{ action 'invalidateSession' }}>Logout</a></li>
           <li>{{#link-to 'user' session.user}} Profile {{/link-to}}</li>
           <li>{{#link-to 'game' 1}} Game {{/link-to}}</li>
