--- a/client/templates/user.hbs
+++ b/client/templates/user.hbs
@@ -10,23 +10,18 @@
    </div>
    <div class="col-md-8">
     {{#each player in players}}
-    <div class="bs-callout discovery-callout">
-      <div class="container-fluid"> 
-        <div class="row">
-          <div class="col-md-12">
-            <div class="game-list-name">
-              {{#link-to 'game' 1 }} Game: University of Idaho Spring 2013 {{/link-to}}
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-           <div class=""> Human Code: {{player.human_code}} </div>
-          </div>
-          <div class="col-md-6">
-            <div class=""> Status: {{ player.status}} </div>
-          </div>
-        </div>
+
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          {{#link-to 'game' 1 }} Game: University of Idaho Spring 2013 {{/link-to}}
+        </h3>
+      </div>
+      <div class="panel-body">
+        <h1>
+          <span class="label label-success">Human Code: {{player.human_code}}</span>
+          <span class="label label-warning">Status: {{player.status}}</span>
+        </h1>
       </div>
     </div>
     {{/each}}
