--- a/client/templates/users.create.hbs
+++ b/client/templates/users.create.hbs
@@ -1,5 +1,5 @@
-{{#if errors}}
-  <div class="alert alert-danger"><h1>{{errors}}</h1></div>
+{{#if error}}
+  <div class="alert alert-danger"><h1>{{error}}</h1></div>
 {{/if}}
 <div class="container-fluid">
   <div class="row create-account-page">
