--- a/client/templates/game.hbs
+++ b/client/templates/game.hbs
@@ -4,8 +4,8 @@
 <div class="container-fluid profile-header"> 
   <div class="row">
    <div class="col-md-3">
-    <div class="profile-image">
-      <img class="large-avatar" {{bind-attr src=avatar_url}}></img>
+    <div class="profile-image large-avatar">
+      <img class ="large-avatar" src="http://i.imgur.com/gXZP1GKm.jpg"> </img>
     </div>
     <h2 {{name}} </h2>
     <div> {{description}} </div>
@@ -44,6 +44,7 @@
       </div>
       <div class="block-body event-feed-body">
           No events yet
+
       </div>
     </div>
   </div>
