--- a/client/templates/users.create.hbs
+++ b/client/templates/users.create.hbs
@@ -26,7 +26,7 @@
         <div class="form-group">
           <label class="col-sm-3 control-label">Last Name</label>
           <div class="col-sm-5">
-            {{input type="password" placeholder="last name" valueBinding="last_name" }}
+            {{input type="text" placeholder="last name" valueBinding="last_name" }}
           </div>
         </div>
         <div class="form-group">
