joining a game shows up right away

--- a/client/templates/game.hbs
+++ b/client/templates/game.hbs
@@ -1,6 +1,9 @@
 {{#if error}}
   <div class="alert alert-danger"><h1>{{error}}</h1></div>
 {{/if}}
+{{#if success}}
+  <div class="alert alert-success"><h1>{{success}}</h1></div>
+{{/if}}
 <div class="container-fluid profile-header"> 
   <div class="row">
    <div class="col-md-3">
