--- a/client/templates/user.hbs
+++ b/client/templates/user.hbs
@@ -14,7 +14,7 @@
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title">
-          {{#link-to 'game' 1 }} Game: University of Idaho Spring 2013 {{/link-to}}
+          {{#link-to 'game' 1 }} Game: {{player.game.name}} {{/link-to}}
         </h3>
       </div>
       <div class="panel-body">
