--- a/client/stylesheets/app.styl
+++ b/client/stylesheets/app.styl
@@ -36,6 +36,28 @@
   border-color: #0A98D3
 
 
+.join-game-event
+  height: 50px
+  padding-top: 30px
+  padding-left: 50px
+  padding-bottom: 60px
+  margin-bottom: 20px
+  .join-event-avatar
+    padding: 2px
+  .join-event-text
+    font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+    letter-spacing: -0.02em;
+    font-weight: 200;
+    font-style: normal;
+    display: block;
+    font-size: 28px;
+    line-height: 3.1;
+    color: #333332;
+    .join-event-text-name
+      font-weight: 700
+  .join-game-event-date
+    padding-left: 2px;
+    padding-top: 2px;
 
 //flesh logo
 .logo
@@ -127,17 +149,8 @@ body
     background-color: #F5F2F2
   //details for specific block bodies
   .event-feed-body
-    height: 100px
-    text-align: center;
-    vertical-align: middle;
-    line-height: 100px;       /* the same as your div height */
-    //only for empty feed
-    font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
-    letter-spacing: -0.02em;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 32px;
-    margin: 0 auto;
+    height: auto
+
   .player-list-body
     height: auto    
   .tag-body
