--- a/client/templates/components.event-item.hbs
+++ b/client/templates/components.event-item.hbs
@@ -28,7 +28,20 @@
 </div>
 {{/if}}
 
-{{#if isJoin}}
+{{#if isJoinGame}}
+  <div class="row join-game-event">
+    <div class= "col-md-2 join-event-avatar">
+        <img class="medium-avatar" {{bind-attr src=event.player.user.avatar_url}}></img>
+    <div class="join-game-event-date"> {{event.created_at}} </div>
+    </div>
+    <div class= "col-md-10 join-event-text">
+      <span class="join-event-text-name"> 
+        {{#link-to 'user' event.player.user}}
+          {{event.player.user.screen_name}}
+        {{/link-to}}
+      </span> joined the game
+    </div>
+  </div>
 {{/if}}
 
 
