--- a/client/templates/game.hbs
+++ b/client/templates/game.hbs
@@ -46,8 +46,9 @@
         </h3> 
       </div>
       <div class="block-body event-feed-body">
-          No events yet
-
+         {{#each event in events}}
+           {{event-item event=event}}
+         {{/each}} 
       </div>
     </div>
   </div>
