--- a/client/stylesheets/app.styl
+++ b/client/stylesheets/app.styl
@@ -37,24 +37,19 @@
 
 
 .join-game-event
-  height: 50px
-  padding-top: 30px
   padding-left: 50px
-  padding-bottom: 60px
   margin-bottom: 20px
   .join-event-avatar
     padding: 2px
   .join-event-text
+    //stolen from medium
     font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
     letter-spacing: -0.02em;
     font-weight: 200;
     font-style: normal;
-    display: block;
     font-size: 28px;
     line-height: 3.1;
     color: #333332;
-    .join-event-text-name
-      font-weight: 700
   .join-game-event-date
     padding-left: 2px;
     padding-top: 2px;
@@ -130,6 +125,7 @@ body
 // all the content on game profiles are made of these blocks
 .profile-block
   //the colored title for any block
+  height: auto
   margin-top: 20px
   .block-header
     height: 75px
