--- a/client/templates/user.hbs
+++ b/client/templates/user.hbs
@@ -30,5 +30,7 @@
    </div>
   </div>
 </div>
-
+<div class="alert alert-warning"> 
+  <h4> Want to add a photo? Go to <a href="http://en.gravatar.com/">http://en.gravatar.com/</a> and setup a Gravatar with the email: {{email}} </h4>
+</div>
 {{outlet}}
