--- a/client/templates/game.hbs
+++ b/client/templates/game.hbs
@@ -8,7 +8,7 @@
   <div class="row">
    <div class="col-md-3">
     <div class="profile-image large-avatar">
-      <img class ="large-avatar" src="http://i.imgur.com/gXZP1GKm.jpg"> </img>
+      <img class ="large-avatar" src="https://i.imgur.com/gXZP1GKm.jpg"> </img>
     </div>
     <h2 {{name}} </h2>
     <div> {{description}} </div>
