--- a/client/stylesheets/app.styl
+++ b/client/stylesheets/app.styl
@@ -35,20 +35,31 @@
   background-color: #DAE9F6
   border-color: #0A98D3
 
-
+.tag-event
+  padding-left: 50px
+  .tag-event-text
+    //stolen from medium
+    font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+    letter-spacing: -0.02em;
+    font-weight: 200;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 2.1;
+    color: #333332;
+  .tag-event-date
+    padding-left: 2px;
+    padding-top: 2px;
 .join-game-event
   padding-left: 50px
   margin-bottom: 20px
-  .join-event-avatar
-    padding: 2px
   .join-event-text
     //stolen from medium
     font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
     letter-spacing: -0.02em;
     font-weight: 200;
     font-style: normal;
-    font-size: 28px;
-    line-height: 3.1;
+    font-size: 24px;
+    line-height: 2.1;
     color: #333332;
   .join-game-event-date
     padding-left: 2px;
@@ -94,6 +105,11 @@ body
 .medium-avatar
   width: 70px;
   height: 70px;
+  border-radius: 5px;
+
+.small-avatar
+  width: 40px;
+  height: 40px;
   border-radius: 5px;
 
 //text under the avatar for game and user profiles
