--- a/client/templates/application.hbs
+++ b/client/templates/application.hbs
@@ -16,7 +16,7 @@
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
         {{#if session.isAuthenticated}}
-          <li>{{#link-to 'user.edit' session.user}} Settings {{/link-to}}</li>
+          <li>{{#link-to 'user.edit' session.user classNames="fa fa-gear"}} Settings {{/link-to}}</li>
           <li><a {{ action 'invalidateSession' }}>Logout</a></li>
           <li>{{#link-to 'user' session.user}} Profile {{/link-to}}</li>
           <li>{{#link-to 'game' 1}} Game {{/link-to}}</li>
