dashio first run

--- a/client/stylesheets/app.styl
+++ b/client/stylesheets/app.styl
@@ -11,62 +11,9 @@
   font-size: 30
   font-weight: bold
 
-//call out stuff for the discovery page
-.bs-callout
-  padding: 15px 30px 15px 15px
-  border-left: 5px solid #eee
-
-.bs-callout h4
-  margin-top: 0
-
-.bs-callout p:last-child
-  margin-bottom: 0;
-
-.bs-callout code,
-.bs-callout .highlight
-  background-color: #fff
-
-/* Themes for different contexts */
-.bs-callout-danger
-  background-color: #fcf2f2
-  border-color: #dFb5b4
-
-.discovery-callout
-  background-color: #DAE9F6
-  border-color: #0A98D3
-
-.tag-event
-  padding-left: 50px
-  .tag-event-text
-    //stolen from medium
-    font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
-    letter-spacing: -0.02em;
-    font-weight: 200;
-    font-style: normal;
-    font-size: 24px;
-    line-height: 2.1;
-    color: #333332;
-  .tag-event-date
-    padding-left: 2px;
-    padding-top: 2px;
-.join-game-event
-  padding-left: 50px
-  margin-bottom: 20px
-  .join-event-text
-    //stolen from medium
-    font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
-    letter-spacing: -0.02em;
-    font-weight: 200;
-    font-style: normal;
-    font-size: 24px;
-    line-height: 2.1;
-    color: #333332;
-  .join-game-event-date
-    padding-left: 2px;
-    padding-top: 2px;
 
 //flesh logo
-.logo
+.flesh-logo
   text-shadow:none
   font-family:"sansita one"
   font-weight:bold
@@ -75,25 +22,7 @@
   font-size:30px
   line-height:40px
 
-
-//d3
-body 
-  font: 10px sans-serif;
-
-.axis path,
-.axis line
-  fill: none
-  stroke: #000
-  shape-rendering: crispEdge
-
-.x.axis path
-  display: none
-
-.line
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-
+.navbar {min-height:50px !important}
 
 //profile photos
 .large-avatar
@@ -122,71 +51,6 @@ body
 
 .sidebar 
   font-size: 15px
-
-.chart
-  height: 230px
-  width: 600px
-  background-color: #000
-
-// all the content on game profiles are made of these blocks
-.profile-block
-  //the colored title for any block
-  height: auto
-  margin-top: 20px
-  .block-header
-    height: 75px
-    font-size: 24px
-    color: #fff
-    padding-top: 6px
-  //colors for the various block headers
-  .event-feed-header
-    background-color: #428bca
-  .tag-header
-    background-color: #36B838
-  .player-list-header
-    background-color: rgba(216, 36, 50, 0.74)
-
-  //the content body of any block
-  .block-body
-    background-color: #F5F2F2
-  //details for specific block bodies
-  .event-feed-body
-    height: auto
-
-  .player-list-body
-    height: auto    
-  .tag-body
-    height: 100px
-    padding-top: 17px
-    .form-control
-      float: left
-      display: block;
-      width: 225px;
-      height: 66px;
-      padding: 11px 11px;
-      font-size: 28px;
-      line-height: 1.42857143;
-      color: #555;
-      background-color: #fff;
-      background-image: none;
-      border: 1px solid #C0B6B6;
-    .save-tag-btn
-      margin-top: 10px
-      margin-left: 66px
-      background-color: #2A7ABD;
-      border-color: #FFFFFF;
-
-//an item in the player list on the game profile page
-.player-item
-  display: inline-block;
-  width: 79px;
-  font-size: 11px;
-  height: 88px;
-  padding: 4px;
-  margin: 2px;
-  overflow: hidden;
-//   .player-item-avatar
-//   .player-item-name
 
 .login-page
   margin-top: 150px
