--- a/client/templates/application.hbs
+++ b/client/templates/application.hbs
@@ -1,4 +1,5 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<body>
+<div class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar">
@@ -7,9 +8,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {{#link-to 'index' classNames="navbar-brand logo"}} flesh {{/link-to}}
+      {{#link-to 'index' classNames="navbar-brand flesh-logo"}} flesh {{/link-to}}
     </div>
   </div>
+</div>
 </div>
 <div class="container-fluid">
   <div class="row">
@@ -32,3 +34,4 @@
     </div>
   </div>
 </div>
+</body>
