--- a/client/stylesheets/game_profile.styl
+++ b/client/stylesheets/game_profile.styl
@@ -47,7 +47,7 @@
     .save-tag-btn
       margin-top: 10px
       margin-left: 66px
-      background-color: #2A7ABD;
+      background-color: #4FB9C2;
       border-color: #FFFFFF;
 
 //an item in the player list on the game profile page
