--- a/client/stylesheets/game_profile.styl
+++ b/client/stylesheets/game_profile.styl
@@ -3,6 +3,7 @@
   //the colored title for any block
   height: auto
   margin-top: 20px
+  
   .block-header
     height: 40px
     font-size: 20px
@@ -11,14 +12,16 @@
     line-height: 2.1
     font-size: 20px
     font-weight: 300
+  
   //colors for the various block headers
   .event-feed-header
     background-color: #389CD0
+  
   .tag-header
     background-color: #43b1a9
+  
   .player-list-header
     background-color: rgba(216, 36, 50, 0.74)
-
 
   //details for specific block bodies
   .event-feed-body
@@ -28,6 +31,7 @@
 
   .player-list-body
     height: auto    
+  
   .tag-body
     background-color: #4ECDC4;
     height: 100px
@@ -35,18 +39,18 @@
     .form-control
       float: left
       display: block;
-      width: 225px;
       height: 66px;
       padding: 11px 11px;
-      font-size: 28px;
+      font-size: 22px;
       line-height: 1.42857143;
       color: #555;
       background-color: #fff;
       background-image: none;
       border: 1px solid #C0B6B6;
+    
     .save-tag-btn
+      float: right
       margin-top: 10px
-      margin-left: 66px
       background-color: #4FB9C2;
       border-color: #FFFFFF;
 
@@ -62,6 +66,7 @@
 
 .tag-event
   padding-left: 50px
+  
   .tag-event-text
     //stolen from medium
     font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
@@ -78,6 +83,7 @@
 .join-game-event
   padding-left: 50px
   margin-bottom: 20px
+  
   .join-event-text
     //stolen from medium
     font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
@@ -87,7 +93,7 @@
     font-size: 24px;
     line-height: 2.1;
     color: #333332;
+  
   .join-game-event-date
     padding-left: 2px;
     padding-top: 2px;
-
