--- a/client/stylesheets/dashio_overrides.styl
+++ b/client/stylesheets/dashio_overrides.styl
@@ -12,6 +12,7 @@ body
 .green-panel .green-header
   margin-bottom: 0px; 
 
+//dashio chatroom styles being used for newsfeed
 .group-rom .first-part
   width: 25%
   padding-left: 5px
@@ -27,20 +28,32 @@ body
     padding-bottom: 5px
     text-align: left
 
-//no $ so no need for margin
+//no $ sign so no need for margin
 .content-panel h4
   margin-left: 0px;
 
 
-//setting up main dashio color
+/*sidebar navigation*/
 
+#sidebar
+  width: 170px;
+
+//setting up main dashio color
 .profile-text h3
 .profile-text h4
   color: #7B489C //purple
 
-
 ul.sidebar-menu li a.active, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:focus
   background: #835AC2 //purple on dark
+
+
+.main
+  padding: 20px
+
+@media (min-width: 768px)
+  .main
+    padding-right: 20px
+    padding-left: 20px
 
 
 
