Spice up that language

--- a/client/templates/components.event-item.hbs
+++ b/client/templates/components.event-item.hbs
@@ -8,7 +8,7 @@
     {{#link-to 'user' event.tag.tagger.user}}
       {{event.tag.tagger.user.screen_name}}
     {{/link-to}}
-    tagged
+    fed on
     {{#link-to 'user' event.tag.taggee.user}}
       {{event.tag.taggee.user.screen_name}}
     {{/link-to}}
