--- a/client/templates/user.hbs
+++ b/client/templates/user.hbs
@@ -9,6 +9,7 @@
     <h4 class="profile-screen-name"> ({{first_name}} {{last_name}}) </h4>
    </div>
    <div class="col-md-8">
+
     {{#each player in players}}
 
     <div class="panel panel-primary">
@@ -18,6 +19,7 @@
         </h3>
       </div>
       <div class="panel-body">
+        {{player.game.isRunning}}
         <h1>
           {{#if player.human_code}}
             <span class="label label-success">Human Code: {{player.human_code}}</span>
