--- a/client/templates/game.hbs
+++ b/client/templates/game.hbs
@@ -82,6 +82,9 @@
               <div type="button" class="save-tag-btn btn btn-primary btn-lg " {{action "registerTag"}}>save tag</div>
            </div>
           </div>
+            <div class="alert tag-body"> 
+              {{render sms_instructions}}
+            </div>
         </div>
       </div>
     </div>
